# victorinix

./: .gitignore  Cargo.toml  README.md  build.rs  deploy  download-js.nix  env.nix  example.nix  flake.nix  my-tmp-website.html  vicPkgs.nix  webfiles.nix  webrun.nix
docs/: ideas.md
npm-package/: package-lock.json  package.json
src/: elf_modification.rs  elf_props.rs  env.rs  env_option.rs  error.rs  main.c  main.rs  victor.rs
src/commands/: info.rs  run.rs
