[package]
name = "victorinix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["cargo"] }
colored = "2.1.0"
env_logger = "0.11.3"
json = "0.12.4"
libelf = "0.1.0"
log = "0.4.21"
