[package]
name = "victorinix"
version = "0.1.0"
edition = "2021"
builder = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.1", features = ["cargo"] }
colored = "2.1.0"
env_logger = "0.11.3"
flate2 = "1.0.30"
json = "0.12.4"
libelf = "0.1.0"
log = "0.4.21"
reqwest = { version = "0.12.4", features = ["blocking"] }
serde = { version = "1.0.203", default-features = false }
serde_json = "1.0.117"
tar = "0.4.40"
umask = "2.1.0"

[build-dependencies]
cc = "1.0"

[profile.release]
# Tell `rustc` to optimize for small code size.
# size without: 4.7MB, with: 4.4MB
opt-level = "s"
